--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
+                    <span class="type-label-lg"></span>
+                </router-link>
+                
+                <router-link class="nav__tab" to="/">
                     <span class="type-label-lg">List</span>
                 </router-link>
                 <router-link class="nav__tab" to="/leaderboard">
