--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSd6BVUbdufqOVXH3YADsgmU0oT61tUMq1zDLWUpHccYy6NdUA/viewform?usp=sharing&ouid=100613073993735882752"
                         target="_blank"
                         >Submit Record</a
                     >
