--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         class="nav__cta type-label-lg"
                         href="https://docs.google.com/forms/d/e/1FAIpQLSd6BVUbdufqOVXH3YADsgmU0oT61tUMq1zDLWUpHccYy6NdUA/viewform?usp=sharing&ouid=100613073993735882752"
                         target="_blank"
-                        >Submit Record</a
+                        >Submit Record Or Verification</a
                     >
                 </div>
             </nav>
