--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                 <p>v1.0.1</p>
             </div>
             <nav class="nav">
+                <router-link class="nav__tab" to="">
+                    <span class=""></span>
+                </router-link>
+                <router-link class="nav__tab" to="">
+                    <span class=""></span>
+                </router-link>
                 <router-link class="nav__tab" to="/">
                     <span class="type-label-lg">List</span>
                 </router-link>
